# local-model

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
bench/: eval_harness.py  throughput.py  vibe_check.py
bench/baselines/v1-mac-mlx/: README.md  mmlu-stem-llama-3.1-8b-4bit.json  throughput-llama-3.1-8b-4bit.json  throughput-smollm-135m-4bit.json  vibe-llama-3.1-8b-4bit.md  (+1 more)
bench/prompts/: vibe_check.json
docs/: V2_Catchup.md  diagrams.md
docs/decisions/: 0001-python-tooling.md  0002-deferred-tooling.md  0003-server-architecture.md  0004-streaming-thread-affinity.md  0005-completions-and-scoring.md
docs/plans/: 2026-04-28-v1-mac-mlx.md  post-v1-vllm.md
src/client/: __init__.py  app.py  config.py
src/server/: __init__.py  app.py  capability.py  config.py  registry.py  state.py  streaming.py  timing.py
tests/: test_smoke.py
tests/bench/: test_eval_harness.py  test_throughput.py  test_vibe_check.py
tests/client/: test_client_smoke.py  test_history_page.py  test_presets_page.py  test_stats_page.py
tests/server/: test_app_smoke.py  test_backend_score.py  test_backends_base.py  test_capability.py  test_config.py  test_db.py  test_history.py  test_mlx_backend.py  test_presets.py  test_registry.py  test_routes_admin.py  test_routes_chat.py  test_routes_completions.py  test_routes_history.py  test_routes_models.py  test_routes_presets.py  test_streaming.py  test_timing.py  test_vllm_backend.py
tests/smoke/: test_mac_completions.py  test_mac_smoke.py  test_mac_streaming.py
(+23 files in other folders)
