[project]
name = "local-model"
version = "0.1.0"
description = "Local LLM stack on Apple Silicon via MLX, plus a browser chat client."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Kashif Siddiqui" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "httpx>=0.27",
    "mlx-lm>=0.20; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]
bench = [
    "lm-eval>=0.4.5",
]
vllm = [
    "vllm>=0.6; platform_system == 'Linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server", "src/client"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "mac_only: tests that require Apple Silicon + mlx-lm (skipped elsewhere)",
]
